# task1

./: .gitignore  CMakeLists.txt  LinkedList.cpp  LinkedList.h  helpers.cpp  helpers.h  main.cpp
Tests/: TestFixtures.h  tests.cpp
